--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
-    "http-proxy-middleware": "^2.0.6"
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
+    "os-utils": "^0.0.14",
+    "prom-client": "^14.2.0"
   }
 }
